manifests/grafana_alloy_deployment_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-alloy
  namespace: examples
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-alloy
  template:
    metadata:
      labels:
        app: grafana-alloy
    spec:
      containers:
        - name: grafana-alloy
          image: grafana/alloy:latest
          args:
            - -stability.level public-preview
          ports:
            - containerPort: 4317  # OTLP gRPC
            - containerPort: 4318  # OTLP HTTP
            - containerPort: 8888  # Metrics
            - containerPort: 8889  # Prometheus exporter
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
      volumes:
        - name: config
          configMap:
            name: grafana-alloy-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-alloy
  namespace: examples
spec:
  selector:
    app: grafana-alloy
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: metrics
      port: 8888
      targetPort: 8888
    - name: prometheus
      port: 8889
      targetPort: 8889
