manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: examples
  labels:
    app: inventory-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io.scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3001"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: metrics
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: inventory-service
