manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-service-ingress
  namespace: examples
spec:
  ingressClassName: "nginx"
  rules:
    - host: inventory.lab1.local # Replace with your desired host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  name: http
